[gd_scene load_steps=6 format=3 uid="uid://b3u00a845kbu4"]

[ext_resource type="Script" uid="uid://12i7g3vsb17j" path="res://components/upgrade_scenes/upgrade_tree_ui.gd" id="1_uifmq"]
[ext_resource type="PackedScene" uid="uid://dsuhxnhukwvd" path="res://components/upgrade_scenes/upgrade_card.tscn" id="2_l6ni6"]
[ext_resource type="Script" uid="uid://evabtcytw5d3" path="res://components/upgrade_scenes/upgrade_tooltip.gd" id="2_tes6w"]
[ext_resource type="Script" uid="uid://bbxofpqtm3x02" path="res://components/upgrade_scenes/connector_overlay.gd" id="3_l6ni6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6ni6"]
bg_color = Color(0.440438, 0.0321642, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 1)
shadow_size = 8

[node name="UpgradeTreeUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_uifmq")
upgrade_card_scene = ExtResource("2_l6ni6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UpgradeTooltip" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_l6ni6")
script = ExtResource("2_tes6w")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/UpgradeTooltip"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Upgrade Name"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Upgrade Description"
autowrap_mode = 3

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Upgrade Cost"

[node name="EffectList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="BuyButton" type="Button" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = " Buy "

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Upgrade Status"

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConnectorOverlay" type="Node2D" parent="MarginContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
visible = false
script = ExtResource("3_l6ni6")

[node name="CardCanvas" type="Control" parent="MarginContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/MarginContainer/VBoxContainer/BuyButton" to="MarginContainer/HBoxContainer/UpgradeTooltip" method="_on_buy_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/UpgradeTooltip/HBoxContainer/CloseButton" to="MarginContainer/HBoxContainer/UpgradeTooltip" method="_on_close_button_pressed"]
